src/test/deca/syntax/valid/plusieurs_classes.deca
// Description:
//    on créé plusieurs classes
//
// Resultats:
//   ok

class A {
}

class B {
}

class C {
}