src/test/deca/syntax/invalid/mauvaise_extension.deca
// Description:
//    A hérite de plusieurs classes 
//
// Resultats:
//   

class A extends B C{
	
}